// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(Table)
  classes={
    Object {
      "root": "MuiTable-root",
      "stickyHeader": "MuiTable-stickyHeader",
    }
  }
>
  <ListingLine
    data={
      Object {
        "id": 1,
        "name": "Leanne Graham",
        "username": "Bret",
      }
    }
    handleCheckClick={[Function]}
    handleKeyDown={[Function]}
    headers={
      Array [
        Object {
          "id": "name",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Name",
        },
        Object {
          "id": "username",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Username",
        },
      ]
    }
    isSelected={false}
    onClick={[Function]}
  />
</ForwardRef(Table)>
`;

exports[`renders highlighted 1`] = `
<ForwardRef(Table)
  classes={
    Object {
      "root": "MuiTable-root",
      "stickyHeader": "MuiTable-stickyHeader",
    }
  }
>
  <ListingLine
    data={
      Object {
        "id": 1,
        "name": Object {
          "highlight": "Lea",
          "value": "Leanne Graham",
        },
        "username": Object {
          "highlight": "Bret",
          "value": "Leanne Graham",
        },
      }
    }
    handleCheckClick={[Function]}
    handleKeyDown={[Function]}
    headers={
      Array [
        Object {
          "id": "name",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Name",
        },
        Object {
          "id": "username",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Username",
        },
      ]
    }
    isSelected={true}
    onClick={[Function]}
  />
</ForwardRef(Table)>
`;

exports[`renders selected 1`] = `
<ForwardRef(Table)
  classes={
    Object {
      "root": "MuiTable-root",
      "stickyHeader": "MuiTable-stickyHeader",
    }
  }
>
  <ListingLine
    data={
      Object {
        "id": 1,
        "name": "Leanne Graham",
        "username": "Bret",
      }
    }
    handleCheckClick={[Function]}
    handleKeyDown={[Function]}
    headers={
      Array [
        Object {
          "id": "name",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Name",
        },
        Object {
          "id": "username",
          "isPaddingDisabled": true,
          "isSearchable": true,
          "label": "Username",
        },
      ]
    }
    isSelected={true}
    onClick={[Function]}
  />
</ForwardRef(Table)>
`;
